--- a/my-app/package.json
+++ b/my-app/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "material-design-lite": "^1.3.0",
+    "ngx-progressbar": "^2.1.1",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.14"
   },
