--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "^4.4.6",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "material-design-lite": "^1.3.0",
+    "ng2-charts": "^1.6.0",
     "ngx-progressbar": "^2.1.1",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.14"
