--- a/my-app/package.json
+++ b/my-app/package.json
@@ -29,6 +29,7 @@
     "ng2-charts": "^1.6.0",
     "ngx-progressbar": "^2.1.1",
     "rxjs": "^5.5.0",
+    "watchify": "^3.9.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
